# SVO

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements-lock-cu121.txt  requirements-models-cu12.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
configs/: assets.yaml  default.yaml  default_autodl.yaml
configs/datasets/: amber_object.yaml  coco_chair.yaml  pope.yaml
configs/experiments/: cloud_svo.yaml
data/: README.md
docs/: cloud_setup.md  data_preparation.md  experiment_matrix.md  hyperparameters.md  model_zoo.md  reproduction.md  result_schemas.md  stage_plan.md  troubleshooting.md
models/: README.md
outputs/: README.md
scripts/: README.md  build_static_prior.py  check_assets.py  check_chair_parity.py  check_environment.py  download_models.sh  evaluate.py  export_results.py  extract_objects.py  make_val_split.py  prepare_coco_subset.py  prepare_data.sh  revise_captions.py  revise_pope.py  run_all.sh  run_caption.py  run_coco_main_autodl.sh  run_gpu_setup.sh  run_pope.py  run_tests.sh  setup_cloud.sh  smoke_test.sh  sweep_detector_thresholds.py  sweep_thresholds.py  tune_svo_threshold.sh  verify_objects.py
tests/: test_chair_official.py  test_chair_parity_harness.py  test_coco_dataset.py  test_config_and_selection.py  test_evaluation_and_export.py  test_extraction_and_risk.py  test_jsonl_resume.py  test_llava_prompt.py  test_pope_normalizer.py  test_preflight_and_pope_target.py  test_revision.py  test_shell_dry_runs.py
(+63 files in other folders)
