[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reproduce"
version = "0.1.0"
description = "SVO selective object verification framework for LVLM object hallucination mitigation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "paper_reproduce contributors" }]
dependencies = [
    "jsonlines>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
    "stanza>=1.8.0",
]
eval = [
    "pycocotools>=2.0.7",
    "scikit-learn>=1.3.0",
]
models = [
    "accelerate>=0.27.0",
    "opencv-python>=4.8.0",
    "sentencepiece>=0.1.99",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tokenizers==0.22.2",
    "huggingface-hub==1.17.0",
    "transformers==5.9.0",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
